syntax="proto3";
import "google/protobuf/empty.proto";
option go_package=".;proto";

//命名规范为:与类型直接相关的R类为 类型名+Info+Req/Res
           //D类则命名为 Del+类型名+Req/Res
           //CU类则命名为 Write+类型名+Req/Res
           //其他存在特殊名的命名规则为 特殊类型名+Req/Res
           //所有限制获取某个类型的List则命名为 类型名+Filter+Req/Res
           //其余超出以上范围的则与rpc函数名对齐
service Goods{
//商品服务
    rpc GetGoodList(GoodsFilterReq) returns(GoodsListRes);
    //用于通过id数组得到所有商品信息,常用于从订单中获得所有商品信息,
    rpc GetGoodsListById(BatchGoodsByIdReq)returns(GoodsListRes);
    //增删改
    rpc CreateGoods(WriteGoodsInfoReq)returns(GoodsInfoRes);
    rpc DeleteGoods(DelGoodsReq) returns(google.protobuf.Empty);
    rpc UpdeateGoods(WriteGoodsInfoReq)returns(google.protobuf.Empty);
    rpc GetGoodsDetail(GoodsInfoReq)returns(GoodsInfoRes);

//商品类型服务
    rpc GetAllCategyList(google.protobuf.Empty)returns(CategyListRes);
    rpc GetSubCategy(SubCategyReq)returns(SubCategyListRes);
    rpc CreateCategy(CategyInfoReq)returns(CategyInfoRes);
    rpc DeleteCategy(DelCategyReq)returns(google.protobuf.Empty);
    rpc UpdateCategy(CategyInfoReq)returns(google.protobuf.Empty);

//品牌服务
    rpc GetBrandList(BrandFilterReq)returns(BrandListRes);
    rpc CreateBrand(BrandInfoReq)returns(BrandInfoRes);
    rpc DeleteBrand(DelBrandReq)returns(google.protobuf.Empty);
    rpc UpdateBrand(BrandInfoReq)returns(google.protobuf.Empty);

//轮播窗口服务
    rpc GetBannerList(google.protobuf.Empty)returns(BannerListRes);
    rpc CreateBanner(BannerInfoReq)returns(BannerInfoRes);
    rpc DeleteBanner(DelBrandReq)returns(google.protobuf.Empty);
    rpc UpdateBanner(BannerInfoReq)returns(google.protobuf.Empty);

//品牌分类服务
    rpc GetCategyBrandList(CategyBrandFilterReq)returns(CategyBrandListRes);
    //通过一个类型获得所有有这个类型的品牌
    rpc GetBrandListByCategy(CategyInfoReq)returns(BrandListRes);
    rpc CreateCategyBrand(CategyBrandInfoReq)returns(CategyBrandInfoRes);
    rpc DeleteCategyBrand(CategyBrandInfoReq)returns(google.protobuf.Empty);
    rpc UpdateCategyBrand(CategyBrandInfoReq)returns(google.protobuf.Empty);
}   

//返回一堆商品目录
message CategyListRes{
    int64 total = 1;
    repeated CategyInfoRes data = 2;
    string jsonData = 3;
}

//商品目录信息类
message CategyInfoReq{
    int32 id = 1;
    string name = 2;
    int32 parentCategyId = 3;
    int32 level = 4;
    bool OnTable = 5;
}

//返回商品目录信息
message CategyInfoRes{
    int32 id = 1;
    string name = 2;
    int32 parentCategyId = 3;
    int32 level = 4;
    bool OnTable = 5;
}

//指定删除目录
message DelCategyReq{
    int32 id = 1;
}

//暂时没有用到
message CategyFliterReq{
    int32 id = 1;
    bool OnTable = 2;
}

//暂时没有用到
message QueryCategyRes{
    int32 id = 1;
    string name = 2;
}

//请求对应商品目录的子目录
message SubCategyReq{
    int32 id = 1;
    int32 level = 2;
}

//返回查询到的子商品目录
message SubCategyListRes{
    int64 total = 1;
    //既把Sub目录返回,也把Sub的Sub目录返回
    CategyInfoRes selfInfo = 2;
    repeated CategyInfoRes subInfo = 3;
}




//这里的几个可能是用于多对多关系的查询?
//限制返回的消息数量
message CategyBrandFilterReq{
    int32 pagesNum = 1;
    int32 pageSize = 2;
}

//暂时没有用到
message CategyFilterReq{
    int32 pagesNum = 1;
    int32 pageSize = 2;
}

//请求获得商品品牌与商品目录
message CategyBrandInfoReq{
    int32 id = 1;
    int32 categyId = 2;
    int32 brandId = 3;
}

//
message CategyBrandListRes{
    int64 total = 1;
    repeated CategyBrandInfoRes data = 2;
}

//返回获得商品品牌与商品目录?
message CategyBrandInfoRes{
    int32 id = 1;
    BrandInfoRes brandInfo = 2;
    CategyInfoRes CategyInfo = 3;
}





//请求限制数量的品牌类型
message BrandFilterReq{
    int32 pagesNum = 1;
    int32 pageSize = 2;
}

//返回一堆滑动窗口商品信息
message BannerListRes{
    int64 total = 1;
    repeated BannerInfoRes data = 2;
}

//请求滑动窗口的商品
message BannerInfoReq{
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

//返回滑动窗口的商品的信息
message BannerInfoRes{
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

//请求商品品牌
message BrandInfoReq{
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

//返回品牌信息
message BrandInfoRes{
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

//返回一堆品牌信息
message BrandListRes{
    int64 total = 1;
    repeated BrandInfoRes data = 2;
}

//请求删除一个指定的品牌
message DelBrandReq{
    int32 id = 1;
    string name = 2;
}






//通过id批量得到商品,这里主要是一个订单会有多个商品,业务上要把订单的所有信息得到,
message BatchGoodsByIdReq{
    repeated int32 id = 1;
}

//请求删除指定商品
message DelGoodsReq{
    int32 id = 1;
}

//返回商品简明信息
message CategyBriefInfoRes{
    int32 id = 1;
    string name = 2;
}

//请求具体商品信息
message GoodsInfoReq{
    int32 id = 1;
}

//请求创建/或创建商品
message WriteGoodsInfoReq{
    int32 id = 1;
    string name = 2;
    string goodsSign = 3;
    //商品库存,库存会作为另一个微服务,
    int32 stocks = 4;
    int32 soldNum = 5;
    int32 favorNum = 6;
    string goodsBrief = 7;
    string goodsDesc = 8;
     bool transFree = 9;
    repeated string images = 10;
    repeated string dsecImages = 11;
    string firstImage = 12;
     bool isHot = 13;
    bool onSale = 14;
    int32 categyId = 15;
    int32 brandId = 16;
}

//这里看着像是减价,但是我觉得可以改为修改商品信息
message GoodsReduceReq{
    int32 goodsId = 1;
    int32 nums = 2;
}

//
message BatchCategyInfoReq{
    repeated int32 goodsId = 1;
    int32 goodsNums = 2;
    int32 brandNums = 3;
}

//请求并过滤商品信息
message GoodsFilterReq{
    int32 minPrice = 1;
    int32 maxPrice = 2;
    bool isHot = 3;
    bool isNew = 4;
    bool onTable = 5;
    //确定点击的目录是哪一级,会递归显示下一层(或者说下几层)目录
    int32 topCategy = 6;
    int32 pagesNum = 7;
    int32 pageSize = 8;
    string keyWords = 9;
    int32 brand = 10;
}

//返回具体商品信息
message GoodsInfoRes{
    int32 id = 1;
    int32 categyId = 2;
    string name = 3;
    string goodsSign = 4;
    int32 clickNum = 5;
    int32 soldNum = 6;
    int32 favorNum = 7;
    float MarketPrice = 8;
    float shopPrice = 9;
    string goodsBrief = 10;
    string goodsDesc = 11;
    bool transFree = 12;
    repeated string images = 13;
    repeated string dsecImages = 14;
    string firstImage = 15;
    string isNew = 16;
    bool isHot = 17;
    bool onSale = 18;
    int64 addTime = 19;
    //这里还把该商品目录的简明信息拿到了
    CategyBriefInfoRes categy = 20;
    BrandInfoRes brand = 21; 
}

//
message GoodsListRes{
    int64 total = 1;
    repeated GoodsInfoRes data = 2;
}